<resources>
    <string name="app_name">Products Viewer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup_initiation">No account yet? Create one</string>
    <string name="renter_password">Re-enter password</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="name">Name</string>
    <string name="already_have_account">Already a member? Login</string>
    <string name="signup">Create Account</string>
</resources>
